[gd_scene format=3 uid="uid://health_check_scene"]

[ext_resource type="Script" uid="uid://health_check_script" path="res://test/HealthCheck.gd" id="1_abc123"]

[node name="HealthCheck" type="Control" unique_id=1854262605]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_abc123")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1364182167]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="VBoxContainer" unique_id=1806657868]
layout_mode = 2
text = "Health Check - Проверка соединения с Nakama"
horizontal_alignment = 1

[node name="ServerInfo" type="Label" parent="VBoxContainer" unique_id=1806657869]
layout_mode = 2
text = "Сервер: 45.150.9.103:7350"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="VBoxContainer" unique_id=1806657870]
layout_mode = 2
text = "Ожидание..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="ConnectButton" type="Button" parent="VBoxContainer" unique_id=1806657871]
layout_mode = 2
text = "Проверить соединение"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer" unique_id=1806657872]
layout_mode = 2

[node name="LogLabel" type="Label" parent="VBoxContainer" unique_id=2103893868]
layout_mode = 2
text = "Лог:"
autowrap_mode = 2
